--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bip-schnorr": "^0.6.7",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.5",
     "ecpair": "^2.1.0",
+    "ecurve": "^1.0.6",
     "tiny-secp256k1": "^2.2.3"
   }
 }
